Fix mis-aligned buttons

--- a/js/src/jupyter-gmaps.less
+++ b/js/src/jupyter-gmaps.less
@@ -17,6 +17,7 @@
   .btn-group {
       margin-top: 0;
       margin-left: 5px;
+      vertical-align: top;
 
       & > .btn {
           margin-left: -1px;
